# A3Service

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  test-output.txt  tsconfig.base.json
apps/data-pipeline/: README.md  download_manuals.py  project.json  pyproject.toml  run_pipeline.py
apps/data-pipeline/docs/: DATA_OUTPUT_GUIDE.md  PIPELINE-REQUIREMENTS.md
apps/data-pipeline/input/: source_registry.example.json
apps/data-pipeline/notes/: direct_sources_all.txt
apps/data-pipeline/output_json/: YourBrand_targeted_output.json  demo_vaillant_echotech_plus.json  vaillant_ecotec_faults.json
apps/data-pipeline/output_json/Baxi/: baxi_100-2-he-plus_91a454cb49.json  baxi_100-he_0b53f87e2e.json  baxi_600-combi-2_ac91b9ba0c.json  baxi_600-system-2_ef5fe10247.json  baxi_800-combi-2_beb00e344e.json  baxi_800-system-2_4968349937.json  baxi_baxi-combi_192b27ed53.json  baxi_baxi-combi_1ac042b39f.json  baxi_baxi-combi_c1180d3884.json  baxi_baxi-system_7b7d4766cc.json  baxi_combi-2-1_9e7ecc070b.json  baxi_combi-2_b971273d1c.json  baxi_condensing-combination-boiler_3566da1623.json  baxi_heat_b3eaa7584b.json
apps/data-pipeline/output_json/Bosch/: bosch_96-afue-condensing-gas-furnace_94482f02fb.json  bosch_96-afue-condensing-gas-furnace_ddbe41d426.json  bosch_96-afue-gas-furnace_de7c5bfb52.json  bosch_buderus-ssb-boilers_f72be98122.json  (+2 more)
apps/data-pipeline/prompts/: extract_faults.txt  extract_manual_data.txt
apps/data-pipeline/src/: api_extractor.py  downloader.py  manual_source_schema.py  schemas.py
(+292 files in other folders)
