[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.69.0",
    "json-repair>=0.59.5",
    "jupyter>=1.1.1",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
